# dejpeg

./: .gitignore  DOCKERFILE  README.md  build.gradle  build.gradle.kts  build.sh  building.md  docker-compose.yml  docker.sh  flake.nix  generatelibs.sh  gradle.properties  local.properties  rel.sh  settings.gradle  settings.gradle.kts
.forgejo/workflows/: nightlies.yml
app/: build.gradle  build.gradle.kts  lint.xml  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/embedonnx/: 1x-RGB-max-Denoise.onnx  1x-span-anime-pretrain-fp16.onnx
app/src/main/assets/faq/: brisque.md  what_is_this.md  which_models.md
app/src/main/assets/faq-en/: which_models.md
app/src/main/cpp/: CMakeLists.txt  brisque_assessor.cpp  oidn_jni.cpp
app/src/main/cpp/include/OpenImageDenoise/: config.h
app/src/main/java/com/je/dejpeg/: App.kt  AppBackgroundService.kt  AppLifecycleTracker.kt  BackgroundMgr.kt  BeforeAfterImageView.kt  (+25 more)
app/src/main/res/anim/: activity_open_enter.xml  activity_open_exit.xml
app/src/main/res/color/: button_state_list.xml
app/src/main/res/drawable/: dejpeg.xml  dejpeg_logo_curved.xml  dejpeg_logo_curved_bg.xml  dejpeg_logo_curved_fg.xml  dejpeg_text.xml  ic_about.xml  ic_brisque.xml  ic_cancel.xml  ic_complete.xml  ic_gallery.xml  ic_help.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_model.xml  ic_notification.xml  ic_processing.xml  ic_queue.xml  ic_save.xml  ic_service.xml  ic_settings.xml  placeholder.xml
app/src/main/res/drawable-night/: dejpeg.xml  dejpeg_text.xml
app/src/main/res/layout/: activity_image_detail.xml  activity_main.xml  dialog_config.xml  dialog_faq.xml  dialog_image_picker.xml  dialog_model_management.xml  dialog_model_selection.xml  dialog_progress_material3.xml  dialog_save_image.xml  dialog_switch_row.xml  fragment_import.xml  fragment_queue.xml  list_item_queue.xml  log_background.xml  page_indicator_background.xml  preference_switch_row.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  main_menu.xml  menu_bottom_nav.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-en-rUS/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/values-zh-rCH/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
assets/: none
building/: brisque.sh  readme.md
building/oidn/: patch_min.sh  patch_none.sh  readme.md
chainner/: README.md  fbcnn_node.py
examples/: README.md
fastlane/metadata/android/ar/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 2.2.txt  2.3.txt  220.txt  230.txt  242.txt  250.txt  251.txt  252.txt  253.txt  261.txt  270.txt  300.txt  310.txt  320.txt  330.txt  331.txt  340.txt  341.txt  342.txt  343.txt  350.txt  351.txt  352.txt  360.txt  362.txt  400.txt  401.txt  402.txt  410.txt
fastlane/metadata/android/it-IT/: full_description.txt  short_description.txt
fastlane/metadata/android/it-IT/changelogs/: 410.txt
fastlane/metadata/android/ja-JP/: full_description.txt  short_description.txt
fastlane/metadata/android/nl-NL/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/changelogs/: 410.txt
fastlane/metadata/android/tr-TR/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
models/: others.md  readme.md
models/conversion-scripts/: readme.md
models/conversion-scripts/FBCNN/: README.md  conv_fbcnn.py  convert_mobile.py  convert_to_fp16.py  requirements.txt  test.py
models/conversion-scripts/FBCNN/models/: network_fbcnn.py
models/conversion-scripts/RMBG/: py.py
models/conversion-scripts/SCUNet/: README.md  convert_mobile.py  convert_to_fp16.py  network_scunet.py
odin/: build.sh  patch_all.sh  patch_min.sh  patch_none.sh  readme.md
oidn/: build.sh  patch_all.sh  readme.md
src/main/java/com/je/djpeg/: ImageProcessor.java
src/main/res/layout/: dialog_progress.xml  dialog_rounded_background.xml  log_item.xml
(+171 files in other folders)
